# SamPixel

./: CMakeLists.txt  README.md  config.cpp  config.h  headfile.h  main.cpp
config/: config.cfg  config.cpp  config.h
